--- a/pages/updateAgencyDescription/updateAgencyDescription.wxss
+++ b/pages/updateAgencyDescription/updateAgencyDescription.wxss
@@ -1,1 +1,169 @@
-/* pages/updateAgencyDescription/updateAgencyDescription.wxss */
+.title {
+  font-size: 32rpx; 
+  color: #000000;
+}
+
+button{
+	background:#ff7419;
+	color:#fff;
+	border: none;
+	line-height:2.2;
+	margin:0;
+	font-size: 32rpx;
+	border-radius: 0;
+	width: 100%;
+	position: fixed;
+	left:0;
+	bottom: 0;
+	border: 0;
+}
+
+.message{
+	float:none;
+	width:100%;
+	flex-direction:row-reverse;
+	zoom:1;
+	overflow:hidden;
+	padding: 30rpx 0 0;
+	background: #fff;
+	border-radius: 16rpx;
+	box-sizing: border-box;
+	position:relative;
+	margin: 40rpx 0;
+}
+
+.form{
+	background: #fff;
+	border-radius: 20rpx;
+	padding: 20rpx 40rpx;
+	margin:40rpx 0;
+	box-sizing: border-box;
+}
+.form .form-item{
+	box-sizing: border-box;
+	width:100%;
+	border-bottom: 2rpx solid #dedede;
+	position:relative;
+	font-size:28rpx;
+}
+.form .form-item .label{
+	position:absolute;
+	left:0;
+	line-height:80rpx;
+}
+.form .form-item .label text,
+.textarea-label text{
+	color: red;
+}
+.form .form-item input{
+	height: 80rpx;
+	padding-left: 135rpx;
+}
+.form .form-item textarea{
+	height: 130rpx;
+	border: 2rpx solid #dedede;
+	width:100%;
+	padding: 10rpx;
+	box-sizing: border-box;
+	z-index: 1;
+}
+.textarea-label{
+	line-height: 80rpx;
+}
+
+.the-label{ width: 100%; background-color: #fff; padding: 70rpx 30rpx 40rpx; box-sizing: border-box; margin-bottom: 20rpx;}
+.the-label .th{ width: 100%; overflow: hidden; }
+.the-label .th .ti{ font-size: 30rpx;}
+.the-label .th .tt{ color: #b2b2b2; font-size: 24rpx; }
+.the-label .list{ width: 100%; overflow: hidden; margin-top: 48rpx;}
+.the-label .list .li{ padding: 0 25rpx; height: 60rpx; line-height: 60rpx; border: 1px solid #f0f0f0;  border-radius: 10rpx; 
+overflow: hidden; font-size: 26rpx; color: #808080; float: left; margin: 0 17rpx 17rpx 0; position: relative;}
+.the-label .list .li.cur{ color: #55beb7; border-color: #55beb7;}
+
+
+.seled{ width: 100%; margin-top: 30rpx; color: #666; font-size: 28rpx; padding: 0 30rpx; box-sizing: border-box;}
+.seled .sel-v{ color: #f00; font-weight: 700; font-size: 30rpx; margin-top: 20rpx; }
+
+.modal-mask {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #000;
+  opacity: 0.5;
+  overflow: hidden;
+  z-index: 9000;
+  color: #fff;
+}
+
+.modal-dialog {
+  width: 540rpx;
+  overflow: hidden;
+  position: fixed;
+  top: 50%;
+  left: 0;
+  z-index: 9999;
+  background: #f9f9f9;
+  margin: -180rpx 105rpx;
+  border-radius: 36rpx;
+}
+
+.modal-title {
+  padding-top: 50rpx;
+  font-size: 32rpx;
+  color: #030303;
+  text-align: center;
+  font-weight: bold;
+}
+
+.modal-content {
+  padding: 50rpx 32rpx;
+}
+
+.modal-input {
+  display: flex;
+  border-radius: 4rpx;
+  font-size: 28rpx;
+}
+
+.input {
+  width: 100%;
+  height: 82rpx;
+  font-size: 28rpx;
+  line-height: 28rpx;
+  padding: 0 20rpx;
+  box-sizing: border-box;
+  color: #333;
+}
+
+input-holder {
+  color: #666;
+  font-size: 28rpx;
+}
+
+.modal-footer {
+  display: flex;
+  flex-direction: row;
+  height: 86rpx;
+  border-top: 1px solid #dedede;
+  font-size: 34rpx;
+  line-height: 86rpx;
+}
+
+.btn-cancel {
+  width: 50%;
+  color: #666;
+  text-align: center;
+  border-right: 1px solid #dedede;
+}
+
+.btn-confirm {
+  width: 100%;
+  color: #ec5300;
+  text-align: center;
+}
+
+.picker{
+	line-height:80rpx;
+}
