--- a/pages/agencyCategory/agencyCategory.wxss
+++ b/pages/agencyCategory/agencyCategory.wxss
@@ -1,10 +1,10 @@
-.section{ position: absolute; width: 100%; height: 100% ; overflow: hidden;}
+.section{ position: absolute; width: 100%; height: 100% ; overflow: hidden; margin-left: -40rpx;}
 .left{ position: absolute; left: 0; top: 0; height: 100%; width: 86px; background: #F6F6F6; text-align: center;font-size:28rpx;}
 .left::before{ content: ""; position: absolute; background: #dcdcdc; right: 0; top: 0; height: 100%; border-right: 1rpx solid #dcdcdc;}
 .left view.active{ background: #FFF; position: relative; z-index: 2;}
-.left view{ display: block; height: 60px; line-height: 60px; border-bottom: 1px solid #dcdcdc;}
+.left view{ display: block; height: 60px; line-height: 60px;}
 
-.right{ margin-left: 90px; height: 100%; overflow: hidden; width: auto;background: #fff;}
+.right{ margin-left: 85px; height: 100%; overflow: hidden; width: auto;background: #fff;}
 .right text{ font-size: 15px}
 .typeTree{ padding: 10px 20px;width: 100%}
 .typeTree .item{  text-align: center; display: inline-block; vertical-align: top;margin-left:14%;}
