--- a/pages/publish/publish.wxml
+++ b/pages/publish/publish.wxml
@@ -15,10 +15,10 @@
         </view>
         <view class='form-item' style="padding-top: 25px; overflow:hidden;">
           <text class='label' style="top:0;">上传图片<text>*</text></text> 
-          <view wx:for="{{tempFilePaths}}"wx:key="{{index}}" style="width:180rpx; float:left; margin: 20px 6rpx 0;">
+          <view wx:for="{{tempFilePaths}}"wx:key="{{index}}" style="width:180rpx; float:left; margin: 20px 6rpx 0; position:relative;">
           
              <image style="width: 180rpx; height: 180rpx; background-color: #eeeeee;" src='{{item}}' data-id='{{index}}' bindlongtap='deleteImg'>
-             <image style='width: 80rpx; height: 80rpx; overflow: hidden; position: absolute; left:54px; border: 0; top: 30px;' src="/images/删除.png" data-id='{{index}}' bindtap='deleteImg'></image>
+             <image style='width: 80rpx; height: 80rpx; overflow: hidden; position: absolute; left:124rpx; border: 0; top: -40rpx;' src="/images/删除.png" data-id='{{index}}' bindtap='deleteImg'></image>
              </image>
           </view>
           <view style="width: 180rpx; height: 180rpx; background-color: #eeeeee; margin: 20px 0; float:left;" bindtap='chooseImage'>
