--- a/pages/goodsDetail/goodsDetail.wxml
+++ b/pages/goodsDetail/goodsDetail.wxml
@@ -6,12 +6,12 @@
     <view class="price">价格：￥{{goods.price}}</view>
     <view class="stock">库存：{{goods.stock}}</view>
   </view>
-  <view style="background: #fff; margin: 0 -40rpx 10px -40rpx; padding: 20rpx 40rpx;">
+  <view style="background: #fff; margin: 0 -40rpx 0px -40rpx; padding: 20rpx 40rpx;">
     <view class="section-title">商品介绍</view>
     <view class='description'>{{goodsDescription}}</view>
     <view class="section-title">商品图文</view>
     <view wx:for="{{goodsPicArr}}">
-      <image style="width: 600rpx; height: 600rpx; margin-left: 35rpx;" src='{{goodsPicArr[index]}}'></image>
+      <image style="width: 112%; height: 375px; margin-left: -20px;" src='{{goodsPicArr[index]}}'></image>
     </view>
   </view>
   <!-- <view class="booking">立即购买</view> -->
