--- a/pages/agencyCategory/agencyCategory.wxml
+++ b/pages/agencyCategory/agencyCategory.wxml
@@ -20,8 +20,8 @@
         <view class="agencylist" wx:for="{{goodses}}" wx:key="{{item.id}}" bindtap="openGoods" data-goods-id="{{item.id}}">
           <image class="itemimage" src='{{item.thumbnail}}'></image>
           <text class="name">{{item.goodsName}}</text>
-          <text class="name">价格：￥{{item.price}}元</text>
-          <text class="name">库存：{{item.stock}}</text>
+          <!-- <text class="name">价格：￥{{item.price}}元</text>
+          <text class="name">库存：{{item.stock}}</text> -->
           <text class="address">{{item.address}}</text>
         </view>
     </scroll-view>
