--- a/pages/goodsDetail/goodsDetail.wxml
+++ b/pages/goodsDetail/goodsDetail.wxml
@@ -28,7 +28,7 @@
                 </navigator>
                 <navigator class="flex-grow-0 flex-y-center bar-bottom-btn" openType="switchTab" url="/pages/index/index">
                     <view>
-                        <image src="../../images/首页.png"></image>
+                        <image src="/images/首页.png"></image>
                         <text>首页</text>
                     </view>
                 </navigator>
