--- a/pages/goodsEdit/goodsEdit.wxml
+++ b/pages/goodsEdit/goodsEdit.wxml
@@ -37,11 +37,11 @@
             <text class='label'>商品名称</text> 
             <input name="goodsName" placeholder="商品名称" value='{{goods.goodsName}}'></input>
         </view>
-        <view class='form-item'>
+        <view class='form-item' style='display:none;'>
             <text class='label'>商品价格</text> 
             <input name="price" placeholder="商品价格" value='{{goods.price}}'></input>
         </view>
-        <view class='form-item'>
+        <view class='form-item' style='display:none;'>
             <text class='label'>商品数量</text> 
             <input name="stock" placeholder="商品数量" value='{{goods.stock}}'></input>
         </view>
