--- a/pages/myShop/myShop.wxml
+++ b/pages/myShop/myShop.wxml
@@ -12,10 +12,11 @@
         <swiper bindchange="swiperChange" class="h-100" current="{{swiper_current}}" duration="300">
             <swiper-item>
                 <scroll-view bindscrolltolower="goodsScrollBottom" class="h-100" lowerThreshold="1" scrollY="true">
-                  <view class='agencylist' wx:for="{{agencyContacts}}" wx:key="{{item.id}}" data-goods-id='{{item.id}}'>
+                  <view class='agencylist' wx:for="{{agencyContacts}}" wx:key="{{item.id}}" data-id='{{item.id}}' bindtap='editContact'>
                         <text class="name">姓名：{{item.contactName}}</text>
                         <text class="address">电话：{{item.mobilephone}}</text>
                         <text class="address">负责区域：{{item.area}}</text>
+                        <text style='width: 80rpx; height: 80rpx; overflow: hidden; position: absolute; right:56rpx; border: 0; top: 20rpx; font-size: 16px' data-id='{{item.id}}' bindtap='delete'>删除</text>
                   </view>
                 </scroll-view>
             </swiper-item>
