--- a/pages/agencyDetail/agencyDetail.wxml
+++ b/pages/agencyDetail/agencyDetail.wxml
@@ -33,6 +33,8 @@
           <text class="address">负责区域：{{item.area}}</text>
     </view>
   </scroll-view>
+  <view style='visibility:hidden;'>------</view>
+  <view style='visibility:hidden;'>------</view>
 
   <!-- <view style="background: #fff; margin: 0 0 10px 0; padding: 40rpx;">
     <text style="margin: 0 0 10px; font-size: 28rpx; color: #000;">点击图中小程序码进行识别,即可进入门店</text>
