--- a/pages/brandCategoryList/brandCategoryList.wxml
+++ b/pages/brandCategoryList/brandCategoryList.wxml
@@ -3,7 +3,7 @@
   <view class="flex-grow-1 wh-100" style="position: absolute;top: 0;left: 0;z-index:0;padding-top: 10rpx">
         <swiper bindchange="swiperChange" class="h-100" current="{{swiper_current}}" duration="300">
             <swiper-item>
-                <scroll-view bindscrolltolower="goodsScrollBottom" class="h-100" lowerThreshold="1" scrollY="true">
+                <scroll-view class="h-100" lowerThreshold="1" scrollY="true">
                   <view class='agencylist' wx:for="{{categorys}}" wx:key="{{item.id}}" bindtap='editBrandCategory'           data-brand-id='{{item.id}}'>
                         <text class="name">品牌名称：{{item.categoryName}}</text>
                         <text class="name">添加时间：{{dateUtil.dateFormat(item.createTime)}}</text>
@@ -11,9 +11,12 @@
                   </view>
                 </scroll-view>
             </swiper-item>
+          <view style='visibility:hidden;'>------</view>
         </swiper>
     </view>
 </view>
+
+<view style='visibility:hidden;'>------</view>
 
 <view>
   <button bindtap='addBrandCategory'>添加品牌</button>
