--- a/pages/updateAgencyDescription/updateAgencyDescription.wxml
+++ b/pages/updateAgencyDescription/updateAgencyDescription.wxml
@@ -4,7 +4,7 @@
       <form bindsubmit="formSubmit" report-submit='true'>
         <view class='form-item'>
           <text class='textarea-label'>商家简介</text>
-          <textarea name="description" style='height:152px;' placeholder='请填写商家简介'></textarea>
+          <textarea name="description" style='height:152px;' placeholder='请填写商家简介' maxlength="1000"></textarea>
         </view>
         <button form-type='submit'>立即提交</button>
       </form>
